# traincli

./: .env.example  .gitignore  LICENSE  README.md  ibm_bob_report.md  pyproject.toml
bob_sessions/: bob_task_may-1-2026_8-06-19-pm.md  bob_task_may-1-2026_8-57-32-pm.md  bob_task_may-2-2026_7-30-10-pm.md  bob_task_may-2-2026_7-59-02-pm.md  bob_task_may-2-2026_8-16-08-pm.md  bob_task_may-2-2026_8-50-42-pm.md  bob_task_may-2-2026_8-51-45-pm.md  bob_task_may-3-2026_2-35-49-pm.md  bob_task_may-3-2026_2-39-40-pm.md
traincli/: cleaner.py  cli.py  config.py  core.py  detector.py  exporter.py  llm.py  mcp_server.py  meta_collector.py  meta_model.pkl  profiler.py  trainer.py
traincli/models/: registry.py
traincli/utils/: display.py  session.py
