[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traincli"
version = "0.1.1"
description = "Train ML models from a single command — no code required"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ewan John Dennis"}
]
keywords = [
    "machine-learning",
    "ml",
    "cli",
    "automl",
    "scikit-learn",
    "training",
    "data-science",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "ibm-watsonx-ai>=1.0.0",
    "mcp>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ewanjohndennis/traincli"
Documentation = "https://github.com/ewanjohndennis/traincli#readme"
Repository = "https://github.com/ewanjohndennis/traincli"
Issues = "https://github.com/ewanjohndennis/traincli/issues"

[project.scripts]
train = "traincli.cli:main"
train-init = "traincli.cli:init"
traincli-mcp = "traincli.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["traincli*"]